# shared-expenses-tracking

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  test-fetch.js
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260307_000001_baseline_bootstrap.py  20260308_000002_authentication_foundation.py  20260308_000003_workspace_foundation.py  20260308_000004_accounts_foundation.py  20260308_000005_categories_foundation.py  20260310_000006_transactions_foundation.py  20260311_000007_transaction_receipts.py  20260322_000008_seed_default_shared_workspace.py  20260408_000009_category_hierarchy_and_personal_accounts.py  20260408_000010_scheduled_payments_table.py
backend/src/app/: __init__.py  main.py
backend/src/app/core/: config.py  redis.py  security.py  storage.py  worker.py
backend/src/app/db/: models.py  session.py
backend/src/app/models/: __init__.py
backend/src/app/repositories/: accounts.py  auth.py  categories.py  dashboard.py  net_balances.py  scheduled_payments.py  transactions.py  workspaces.py
backend/src/app/schemas/: accounts.py  auth.py  categories.py  dashboard.py  net_balances.py  scheduled_payments.py  transactions.py  workspaces.py
backend/src/app/services/: accounts.py  auth.py  categories.py  dashboard.py  net_balances.py  (+3 more)
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_categories.py  test_config.py  test_dashboard.py  test_health.py  test_net_balances.py  test_transactions.py  test_workspaces.py
(+131 files in other folders)
